crates/monochange/tests/snapshots/changeset_policy__multiline_comment@invalid_changeset.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `crates/core/src/lib.rs`

Affected packages:
- `core`

Attached changeset files:
- `.changeset/feature.md`

Errors:
- config error: failed to parse [ROOT]/.changeset/feature.md: target `core` has invalid scalar change type `nope`; valid types: breaking, change, docs, feat, fix, major, minor, none, patch, refactor, security, test
- changed packages are not covered by attached changesets: core

Allowed skip labels:
- `no-changeset-required`

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `monochange change --package <id> --bump patch --reason "describe the change"`
- or apply one of the configured skip labels when no release note is required
