crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@additional_paths.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    "Cargo.lock"
  ],
  "changeset_paths": [],
  "comment": "[multiline text]",
  "covered_package_ids": [],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: core"
  ],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "Cargo.lock"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncovered_package_ids": [
    "core"
  ]
}
