crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@ignored_paths.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affected_package_ids": [],
  "changed_paths": [
    "crates/core/tests/smoke.rs"
  ],
  "changeset_paths": [],
  "comment": null,
  "covered_package_ids": [],
  "enforce": false,
  "errors": [],
  "ignored_paths": [
    "crates/core/tests/smoke.rs"
  ],
  "labels": [],
  "matched_paths": [],
  "matched_skip_labels": [],
  "required": false,
  "status": "not_required",
  "summary": "changeset verification passed: no configured packages were affected by the changed files",
  "uncovered_package_ids": []
}
