crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@invalid_changeset.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    "crates/core/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changeset_paths": [
    ".changeset/feature.md"
  ],
  "comment": "[multiline text]",
  "covered_package_ids": [],
  "enforce": false,
  "errors": [
    "config error: failed to parse [ROOT]/.changeset/feature.md: target `core` has invalid scalar change type `nope`; valid types: breaking, change, docs, feat, fix, major, minor, none, patch, refactor, security, test",
    "changed packages are not covered by attached changesets: core"
  ],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "crates/core/src/lib.rs"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncovered_package_ids": [
    "core"
  ]
}
