crates/monochange/tests/snapshots/changeset_policy__verify_changeset_policy_scenarios_match_snapshot@skip_label.snap
---
source: crates/monochange/tests/changeset_policy.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    "crates/core/src/lib.rs"
  ],
  "changeset_paths": [],
  "comment": null,
  "covered_package_ids": [],
  "enforce": false,
  "errors": [],
  "ignored_paths": [],
  "labels": [
    "no-changeset-required"
  ],
  "matched_paths": [
    "crates/core/src/lib.rs"
  ],
  "matched_skip_labels": [
    "no-changeset-required"
  ],
  "required": false,
  "status": "skipped",
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
  "uncovered_package_ids": [
    "core"
  ]
}
